parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement statement_list
Rule 3     statement_list -> statement
Rule 4     empty -> <empty>
Rule 5     identifier_type -> IDENTIFIER : ARRAY [ NUMBER : NUMBER ] OF TYPE
Rule 6     identifier_type -> IDENTIFIER : TYPE
Rule 7     identifier_type_list -> empty
Rule 8     identifier_type_list -> identifier_type , identifier_type_list
Rule 9     identifier_type_list -> identifier_type
Rule 10    statement -> ? IDENTIFIER
Rule 11    statement -> RETURN expression
Rule 12    statement -> FOR IDENTIFIER ASSIGN expression TO expression STEP expression statement_list NEXT
Rule 13    statement -> FOR IDENTIFIER ASSIGN expression TO expression statement_list NEXT
Rule 14    statement -> REPEAT statement_list UNTIL expression
Rule 15    statement -> WHILE expression DO statement_list ENDWHILE
Rule 16    statement -> CASE OF expression caselist ENDCASE
Rule 17    statement -> IF expression THEN statement_list ELSE statement_list ENDIF
Rule 18    statement -> IF expression THEN statement_list ENDIF
Rule 19    statement -> OUTPUT arg_list
Rule 20    statement -> INPUT IDENTIFIER
Rule 21    statement -> CONSTANT IDENTIFIER = literal
Rule 22    statement -> variable ASSIGN expression  [precedence=right, level=1]
Rule 23    statement -> CALL IDENTIFIER
Rule 24    statement -> CALL IDENTIFIER ( arg_list )
Rule 25    statement -> FUNCTION IDENTIFIER RETURNS TYPE statement_list ENDFUNCTION
Rule 26    statement -> FUNCTION IDENTIFIER ( identifier_type_list ) RETURNS TYPE statement_list ENDFUNCTION
Rule 27    statement -> PROCEDURE IDENTIFIER statement_list ENDPROCEDURE
Rule 28    statement -> PROCEDURE IDENTIFIER ( identifier_type_list ) statement_list ENDPROCEDURE
Rule 29    statement -> DECLARE identifier_type
Rule 30    caselist -> a_case caselist
Rule 31    caselist -> a_case
Rule 32    a_case -> OTHERWISE : statement
Rule 33    a_case -> constant_label : statement
Rule 34    constant_label -> NUMBER
Rule 35    constant_label -> STRING
Rule 36    expression -> literal
Rule 37    expression -> IDENTIFIER ( )
Rule 38    expression -> IDENTIFIER ( arg_list )
Rule 39    expression -> expresssion_operation
Rule 40    expression -> ( expression )
Rule 41    arg_list -> expression , arg_list
Rule 42    arg_list -> expression
Rule 43    expresssion_operation -> expression AND expression  [precedence=left, level=3]
Rule 44    expresssion_operation -> expression OR expression  [precedence=left, level=2]
Rule 45    expresssion_operation -> expression SMALLER expression  [precedence=left, level=5]
Rule 46    expresssion_operation -> expression BIGGER expression  [precedence=left, level=5]
Rule 47    expresssion_operation -> expression NOTEQUAL expression  [precedence=left, level=4]
Rule 48    expresssion_operation -> expression EQUAL expression  [precedence=left, level=4]
Rule 49    expresssion_operation -> expression * expression  [precedence=left, level=7]
Rule 50    expresssion_operation -> expression / expression  [precedence=left, level=7]
Rule 51    expresssion_operation -> expression + expression  [precedence=left, level=6]
Rule 52    expresssion_operation -> expression - expression  [precedence=left, level=6]
Rule 53    literal -> IDENTIFIER
Rule 54    literal -> IDENTIFIER [ expression ]
Rule 55    literal -> STRING
Rule 56    literal -> BOOL
Rule 57    literal -> NUMBER . NUMBER
Rule 58    literal -> NUMBER
Rule 59    literal -> - NUMBER  [precedence=right, level=8]
Rule 60    variable -> IDENTIFIER
Rule 61    variable -> IDENTIFIER [ expression ]

Terminals, with rules where they appear:

(                    : 24 26 28 37 38 40
)                    : 24 26 28 37 38 40
*                    : 49
+                    : 51
,                    : 8 41
-                    : 52 59
.                    : 57
/                    : 50
:                    : 5 5 6 32 33
=                    : 21
?                    : 10
AND                  : 43
ARRAY                : 5
ASSIGN               : 12 13 22
BIGGER               : 46
BOOL                 : 56
CALL                 : 23 24
CASE                 : 16
CONSTANT             : 21
DECLARE              : 29
DO                   : 15
ELSE                 : 17
ENDCASE              : 16
ENDFUNCTION          : 25 26
ENDIF                : 17 18
ENDPROCEDURE         : 27 28
ENDWHILE             : 15
EQUAL                : 48
FOR                  : 12 13
FUNCTION             : 25 26
IDENTIFIER           : 5 6 10 12 13 20 21 23 24 25 26 27 28 37 38 53 54 60 61
IF                   : 17 18
INPUT                : 20
NEXT                 : 12 13
NOTEQUAL             : 47
NUMBER               : 5 5 34 57 57 58 59
OF                   : 5 16
OR                   : 44
OTHERWISE            : 32
OUTPUT               : 19
PROCEDURE            : 27 28
REPEAT               : 14
RETURN               : 11
RETURNS              : 25 26
SMALLER              : 45
STEP                 : 12
STRING               : 35 55
THEN                 : 17 18
TO                   : 12 13
TYPE                 : 5 6 25 26
UNTIL                : 14
WHILE                : 15
[                    : 5 54 61
]                    : 5 54 61
error                : 

Nonterminals, with rules where they appear:

a_case               : 30 31
arg_list             : 19 24 38 41
caselist             : 16 30
constant_label       : 33
empty                : 7
expression           : 11 12 12 12 13 13 14 15 16 17 18 22 40 41 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 54 61
expresssion_operation : 39
identifier_type      : 8 9 29
identifier_type_list : 8 26 28
literal              : 21 36
program              : 0
statement            : 2 3 32 33
statement_list       : 1 2 12 13 14 15 17 17 18 25 26 27 28
variable             : 22


state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (10) statement -> . ? IDENTIFIER
    (11) statement -> . RETURN expression
    (12) statement -> . FOR IDENTIFIER ASSIGN expression TO expression STEP expression statement_list NEXT
    (13) statement -> . FOR IDENTIFIER ASSIGN expression TO expression statement_list NEXT
    (14) statement -> . REPEAT statement_list UNTIL expression
    (15) statement -> . WHILE expression DO statement_list ENDWHILE
    (16) statement -> . CASE OF expression caselist ENDCASE
    (17) statement -> . IF expression THEN statement_list ELSE statement_list ENDIF
    (18) statement -> . IF expression THEN statement_list ENDIF
    (19) statement -> . OUTPUT arg_list
    (20) statement -> . INPUT IDENTIFIER
    (21) statement -> . CONSTANT IDENTIFIER = literal
    (22) statement -> . variable ASSIGN expression
    (23) statement -> . CALL IDENTIFIER
    (24) statement -> . CALL IDENTIFIER ( arg_list )
    (25) statement -> . FUNCTION IDENTIFIER RETURNS TYPE statement_list ENDFUNCTION
    (26) statement -> . FUNCTION IDENTIFIER ( identifier_type_list ) RETURNS TYPE statement_list ENDFUNCTION
    (27) statement -> . PROCEDURE IDENTIFIER statement_list ENDPROCEDURE
    (28) statement -> . PROCEDURE IDENTIFIER ( identifier_type_list ) statement_list ENDPROCEDURE
    (29) statement -> . DECLARE identifier_type
    (60) variable -> . IDENTIFIER
    (61) variable -> . IDENTIFIER [ expression ]
    ?               shift and go to state 4
    RETURN          shift and go to state 6
    FOR             shift and go to state 7
    REPEAT          shift and go to state 8
    WHILE           shift and go to state 9
    CASE            shift and go to state 10
    IF              shift and go to state 11
    OUTPUT          shift and go to state 12
    INPUT           shift and go to state 13
    CONSTANT        shift and go to state 14
    CALL            shift and go to state 16
    FUNCTION        shift and go to state 17
    PROCEDURE       shift and go to state 18
    DECLARE         shift and go to state 19
    IDENTIFIER      shift and go to state 5

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    variable                       shift and go to state 15

state 1

    (0) S' -> program .


state 2

    (1) program -> statement_list .
    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (2) statement_list -> statement . statement_list
    (3) statement_list -> statement .
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (10) statement -> . ? IDENTIFIER
    (11) statement -> . RETURN expression
    (12) statement -> . FOR IDENTIFIER ASSIGN expression TO expression STEP expression statement_list NEXT
    (13) statement -> . FOR IDENTIFIER ASSIGN expression TO expression statement_list NEXT
    (14) statement -> . REPEAT statement_list UNTIL expression
    (15) statement -> . WHILE expression DO statement_list ENDWHILE
    (16) statement -> . CASE OF expression caselist ENDCASE
    (17) statement -> . IF expression THEN statement_list ELSE statement_list ENDIF
    (18) statement -> . IF expression THEN statement_list ENDIF
    (19) statement -> . OUTPUT arg_list
    (20) statement -> . INPUT IDENTIFIER
    (21) statement -> . CONSTANT IDENTIFIER = literal
    (22) statement -> . variable ASSIGN expression
    (23) statement -> . CALL IDENTIFIER
    (24) statement -> . CALL IDENTIFIER ( arg_list )
    (25) statement -> . FUNCTION IDENTIFIER RETURNS TYPE statement_list ENDFUNCTION
    (26) statement -> . FUNCTION IDENTIFIER ( identifier_type_list ) RETURNS TYPE statement_list ENDFUNCTION
    (27) statement -> . PROCEDURE IDENTIFIER statement_list ENDPROCEDURE
    (28) statement -> . PROCEDURE IDENTIFIER ( identifier_type_list ) statement_list ENDPROCEDURE
    (29) statement -> . DECLARE identifier_type
    (60) variable -> . IDENTIFIER
    (61) variable -> . IDENTIFIER [ expression ]
    $end            reduce using rule 3 (statement_list -> statement .)
    UNTIL           reduce using rule 3 (statement_list -> statement .)
    ENDPROCEDURE    reduce using rule 3 (statement_list -> statement .)
    ENDWHILE        reduce using rule 3 (statement_list -> statement .)
    ELSE            reduce using rule 3 (statement_list -> statement .)
    ENDIF           reduce using rule 3 (statement_list -> statement .)
    ENDFUNCTION     reduce using rule 3 (statement_list -> statement .)
    NEXT            reduce using rule 3 (statement_list -> statement .)
    ?               shift and go to state 4
    RETURN          shift and go to state 6
    FOR             shift and go to state 7
    REPEAT          shift and go to state 8
    WHILE           shift and go to state 9
    CASE            shift and go to state 10
    IF              shift and go to state 11
    OUTPUT          shift and go to state 12
    INPUT           shift and go to state 13
    CONSTANT        shift and go to state 14
    CALL            shift and go to state 16
    FUNCTION        shift and go to state 17
    PROCEDURE       shift and go to state 18
    DECLARE         shift and go to state 19
    IDENTIFIER      shift and go to state 5

    statement                      shift and go to state 3
    statement_list                 shift and go to state 20
    variable                       shift and go to state 15

state 4

    (10) statement -> ? . IDENTIFIER
    IDENTIFIER      shift and go to state 21


state 5

    (60) variable -> IDENTIFIER .
    (61) variable -> IDENTIFIER . [ expression ]
    ASSIGN          reduce using rule 60 (variable -> IDENTIFIER .)
    [               shift and go to state 22


state 6

    (11) statement -> RETURN . expression
    (36) expression -> . literal
    (37) expression -> . IDENTIFIER ( )
    (38) expression -> . IDENTIFIER ( arg_list )
    (39) expression -> . expresssion_operation
    (40) expression -> . ( expression )
    (53) literal -> . IDENTIFIER
    (54) literal -> . IDENTIFIER [ expression ]
    (55) literal -> . STRING
    (56) literal -> . BOOL
    (57) literal -> . NUMBER . NUMBER
    (58) literal -> . NUMBER
    (59) literal -> . - NUMBER
    (43) expresssion_operation -> . expression AND expression
    (44) expresssion_operation -> . expression OR expression
    (45) expresssion_operation -> . expression SMALLER expression
    (46) expresssion_operation -> . expression BIGGER expression
    (47) expresssion_operation -> . expression NOTEQUAL expression
    (48) expresssion_operation -> . expression EQUAL expression
    (49) expresssion_operation -> . expression * expression
    (50) expresssion_operation -> . expression / expression
    (51) expresssion_operation -> . expression + expression
    (52) expresssion_operation -> . expression - expression
    IDENTIFIER      shift and go to state 25
    (               shift and go to state 26
    STRING          shift and go to state 28
    BOOL            shift and go to state 29
    NUMBER          shift and go to state 30
    -               shift and go to state 31

    expression                     shift and go to state 23
    literal                        shift and go to state 24
    expresssion_operation          shift and go to state 27

state 7

    (12) statement -> FOR . IDENTIFIER ASSIGN expression TO expression STEP expression statement_list NEXT
    (13) statement -> FOR . IDENTIFIER ASSIGN expression TO expression statement_list NEXT
    IDENTIFIER      shift and go to state 32


state 8

    (14) statement -> REPEAT . statement_list UNTIL expression
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (10) statement -> . ? IDENTIFIER
    (11) statement -> . RETURN expression
    (12) statement -> . FOR IDENTIFIER ASSIGN expression TO expression STEP expression statement_list NEXT
    (13) statement -> . FOR IDENTIFIER ASSIGN expression TO expression statement_list NEXT
    (14) statement -> . REPEAT statement_list UNTIL expression
    (15) statement -> . WHILE expression DO statement_list ENDWHILE
    (16) statement -> . CASE OF expression caselist ENDCASE
    (17) statement -> . IF expression THEN statement_list ELSE statement_list ENDIF
    (18) statement -> . IF expression THEN statement_list ENDIF
    (19) statement -> . OUTPUT arg_list
    (20) statement -> . INPUT IDENTIFIER
    (21) statement -> . CONSTANT IDENTIFIER = literal
    (22) statement -> . variable ASSIGN expression
    (23) statement -> . CALL IDENTIFIER
    (24) statement -> . CALL IDENTIFIER ( arg_list )
    (25) statement -> . FUNCTION IDENTIFIER RETURNS TYPE statement_list ENDFUNCTION
    (26) statement -> . FUNCTION IDENTIFIER ( identifier_type_list ) RETURNS TYPE statement_list ENDFUNCTION
    (27) statement -> . PROCEDURE IDENTIFIER statement_list ENDPROCEDURE
    (28) statement -> . PROCEDURE IDENTIFIER ( identifier_type_list ) statement_list ENDPROCEDURE
    (29) statement -> . DECLARE identifier_type
    (60) variable -> . IDENTIFIER
    (61) variable -> . IDENTIFIER [ expression ]
    ?               shift and go to state 4
    RETURN          shift and go to state 6
    FOR             shift and go to state 7
    REPEAT          shift and go to state 8
    WHILE           shift and go to state 9
    CASE            shift and go to state 10
    IF              shift and go to state 11
    OUTPUT          shift and go to state 12
    INPUT           shift and go to state 13
    CONSTANT        shift and go to state 14
    CALL            shift and go to state 16
    FUNCTION        shift and go to state 17
    PROCEDURE       shift and go to state 18
    DECLARE         shift and go to state 19
    IDENTIFIER      shift and go to state 5

    statement_list                 shift and go to state 33
    statement                      shift and go to state 3
    variable                       shift and go to state 15

state 9

    (15) statement -> WHILE . expression DO statement_list ENDWHILE
    (36) expression -> . literal
    (37) expression -> . IDENTIFIER ( )
    (38) expression -> . IDENTIFIER ( arg_list )
    (39) expression -> . expresssion_operation
    (40) expression -> . ( expression )
    (53) literal -> . IDENTIFIER
    (54) literal -> . IDENTIFIER [ expression ]
    (55) literal -> . STRING
    (56) literal -> . BOOL
    (57) literal -> . NUMBER . NUMBER
    (58) literal -> . NUMBER
    (59) literal -> . - NUMBER
    (43) expresssion_operation -> . expression AND expression
    (44) expresssion_operation -> . expression OR expression
    (45) expresssion_operation -> . expression SMALLER expression
    (46) expresssion_operation -> . expression BIGGER expression
    (47) expresssion_operation -> . expression NOTEQUAL expression
    (48) expresssion_operation -> . expression EQUAL expression
    (49) expresssion_operation -> . expression * expression
    (50) expresssion_operation -> . expression / expression
    (51) expresssion_operation -> . expression + expression
    (52) expresssion_operation -> . expression - expression
    IDENTIFIER      shift and go to state 25
    (               shift and go to state 26
    STRING          shift and go to state 28
    BOOL            shift and go to state 29
    NUMBER          shift and go to state 30
    -               shift and go to state 31

    expression                     shift and go to state 34
    literal                        shift and go to state 24
    expresssion_operation          shift and go to state 27

state 10

    (16) statement -> CASE . OF expression caselist ENDCASE
    OF              shift and go to state 35


state 11

    (17) statement -> IF . expression THEN statement_list ELSE statement_list ENDIF
    (18) statement -> IF . expression THEN statement_list ENDIF
    (36) expression -> . literal
    (37) expression -> . IDENTIFIER ( )
    (38) expression -> . IDENTIFIER ( arg_list )
    (39) expression -> . expresssion_operation
    (40) expression -> . ( expression )
    (53) literal -> . IDENTIFIER
    (54) literal -> . IDENTIFIER [ expression ]
    (55) literal -> . STRING
    (56) literal -> . BOOL
    (57) literal -> . NUMBER . NUMBER
    (58) literal -> . NUMBER
    (59) literal -> . - NUMBER
    (43) expresssion_operation -> . expression AND expression
    (44) expresssion_operation -> . expression OR expression
    (45) expresssion_operation -> . expression SMALLER expression
    (46) expresssion_operation -> . expression BIGGER expression
    (47) expresssion_operation -> . expression NOTEQUAL expression
    (48) expresssion_operation -> . expression EQUAL expression
    (49) expresssion_operation -> . expression * expression
    (50) expresssion_operation -> . expression / expression
    (51) expresssion_operation -> . expression + expression
    (52) expresssion_operation -> . expression - expression
    IDENTIFIER      shift and go to state 25
    (               shift and go to state 26
    STRING          shift and go to state 28
    BOOL            shift and go to state 29
    NUMBER          shift and go to state 30
    -               shift and go to state 31

    expression                     shift and go to state 36
    literal                        shift and go to state 24
    expresssion_operation          shift and go to state 27

state 12

    (19) statement -> OUTPUT . arg_list
    (41) arg_list -> . expression , arg_list
    (42) arg_list -> . expression
    (36) expression -> . literal
    (37) expression -> . IDENTIFIER ( )
    (38) expression -> . IDENTIFIER ( arg_list )
    (39) expression -> . expresssion_operation
    (40) expression -> . ( expression )
    (53) literal -> . IDENTIFIER
    (54) literal -> . IDENTIFIER [ expression ]
    (55) literal -> . STRING
    (56) literal -> . BOOL
    (57) literal -> . NUMBER . NUMBER
    (58) literal -> . NUMBER
    (59) literal -> . - NUMBER
    (43) expresssion_operation -> . expression AND expression
    (44) expresssion_operation -> . expression OR expression
    (45) expresssion_operation -> . expression SMALLER expression
    (46) expresssion_operation -> . expression BIGGER expression
    (47) expresssion_operation -> . expression NOTEQUAL expression
    (48) expresssion_operation -> . expression EQUAL expression
    (49) expresssion_operation -> . expression * expression
    (50) expresssion_operation -> . expression / expression
    (51) expresssion_operation -> . expression + expression
    (52) expresssion_operation -> . expression - expression
    IDENTIFIER      shift and go to state 25
    (               shift and go to state 26
    STRING          shift and go to state 28
    BOOL            shift and go to state 29
    NUMBER          shift and go to state 30
    -               shift and go to state 31

    arg_list                       shift and go to state 37
    expression                     shift and go to state 38
    literal                        shift and go to state 24
    expresssion_operation          shift and go to state 27

state 13

    (20) statement -> INPUT . IDENTIFIER
    IDENTIFIER      shift and go to state 39


state 14

    (21) statement -> CONSTANT . IDENTIFIER = literal
    IDENTIFIER      shift and go to state 40


state 15

    (22) statement -> variable . ASSIGN expression
    ASSIGN          shift and go to state 41


state 16

    (23) statement -> CALL . IDENTIFIER
    (24) statement -> CALL . IDENTIFIER ( arg_list )
    IDENTIFIER      shift and go to state 42


state 17

    (25) statement -> FUNCTION . IDENTIFIER RETURNS TYPE statement_list ENDFUNCTION
    (26) statement -> FUNCTION . IDENTIFIER ( identifier_type_list ) RETURNS TYPE statement_list ENDFUNCTION
    IDENTIFIER      shift and go to state 43


state 18

    (27) statement -> PROCEDURE . IDENTIFIER statement_list ENDPROCEDURE
    (28) statement -> PROCEDURE . IDENTIFIER ( identifier_type_list ) statement_list ENDPROCEDURE
    IDENTIFIER      shift and go to state 44


state 19

    (29) statement -> DECLARE . identifier_type
    (5) identifier_type -> . IDENTIFIER : ARRAY [ NUMBER : NUMBER ] OF TYPE
    (6) identifier_type -> . IDENTIFIER : TYPE
    IDENTIFIER      shift and go to state 46

    identifier_type                shift and go to state 45

state 20

    (2) statement_list -> statement statement_list .
    $end            reduce using rule 2 (statement_list -> statement statement_list .)
    UNTIL           reduce using rule 2 (statement_list -> statement statement_list .)
    ENDPROCEDURE    reduce using rule 2 (statement_list -> statement statement_list .)
    ENDWHILE        reduce using rule 2 (statement_list -> statement statement_list .)
    ELSE            reduce using rule 2 (statement_list -> statement statement_list .)
    ENDIF           reduce using rule 2 (statement_list -> statement statement_list .)
    ENDFUNCTION     reduce using rule 2 (statement_list -> statement statement_list .)
    NEXT            reduce using rule 2 (statement_list -> statement statement_list .)


state 21

    (10) statement -> ? IDENTIFIER .
    ?               reduce using rule 10 (statement -> ? IDENTIFIER .)
    RETURN          reduce using rule 10 (statement -> ? IDENTIFIER .)
    FOR             reduce using rule 10 (statement -> ? IDENTIFIER .)
    REPEAT          reduce using rule 10 (statement -> ? IDENTIFIER .)
    WHILE           reduce using rule 10 (statement -> ? IDENTIFIER .)
    CASE            reduce using rule 10 (statement -> ? IDENTIFIER .)
    IF              reduce using rule 10 (statement -> ? IDENTIFIER .)
    OUTPUT          reduce using rule 10 (statement -> ? IDENTIFIER .)
    INPUT           reduce using rule 10 (statement -> ? IDENTIFIER .)
    CONSTANT        reduce using rule 10 (statement -> ? IDENTIFIER .)
    CALL            reduce using rule 10 (statement -> ? IDENTIFIER .)
    FUNCTION        reduce using rule 10 (statement -> ? IDENTIFIER .)
    PROCEDURE       reduce using rule 10 (statement -> ? IDENTIFIER .)
    DECLARE         reduce using rule 10 (statement -> ? IDENTIFIER .)
    IDENTIFIER      reduce using rule 10 (statement -> ? IDENTIFIER .)
    $end            reduce using rule 10 (statement -> ? IDENTIFIER .)
    UNTIL           reduce using rule 10 (statement -> ? IDENTIFIER .)
    ENDPROCEDURE    reduce using rule 10 (statement -> ? IDENTIFIER .)
    ENDWHILE        reduce using rule 10 (statement -> ? IDENTIFIER .)
    ELSE            reduce using rule 10 (statement -> ? IDENTIFIER .)
    ENDIF           reduce using rule 10 (statement -> ? IDENTIFIER .)
    ENDFUNCTION     reduce using rule 10 (statement -> ? IDENTIFIER .)
    NEXT            reduce using rule 10 (statement -> ? IDENTIFIER .)
    OTHERWISE       reduce using rule 10 (statement -> ? IDENTIFIER .)
    NUMBER          reduce using rule 10 (statement -> ? IDENTIFIER .)
    STRING          reduce using rule 10 (statement -> ? IDENTIFIER .)
    ENDCASE         reduce using rule 10 (statement -> ? IDENTIFIER .)


state 22

    (61) variable -> IDENTIFIER [ . expression ]
    (36) expression -> . literal
    (37) expression -> . IDENTIFIER ( )
    (38) expression -> . IDENTIFIER ( arg_list )
    (39) expression -> . expresssion_operation
    (40) expression -> . ( expression )
    (53) literal -> . IDENTIFIER
    (54) literal -> . IDENTIFIER [ expression ]
    (55) literal -> . STRING
    (56) literal -> . BOOL
    (57) literal -> . NUMBER . NUMBER
    (58) literal -> . NUMBER
    (59) literal -> . - NUMBER
    (43) expresssion_operation -> . expression AND expression
    (44) expresssion_operation -> . expression OR expression
    (45) expresssion_operation -> . expression SMALLER expression
    (46) expresssion_operation -> . expression BIGGER expression
    (47) expresssion_operation -> . expression NOTEQUAL expression
    (48) expresssion_operation -> . expression EQUAL expression
    (49) expresssion_operation -> . expression * expression
    (50) expresssion_operation -> . expression / expression
    (51) expresssion_operation -> . expression + expression
    (52) expresssion_operation -> . expression - expression
    IDENTIFIER      shift and go to state 25
    (               shift and go to state 26
    STRING          shift and go to state 28
    BOOL            shift and go to state 29
    NUMBER          shift and go to state 30
    -               shift and go to state 31

    expression                     shift and go to state 47
    literal                        shift and go to state 24
    expresssion_operation          shift and go to state 27

state 23

    (11) statement -> RETURN expression .
    (43) expresssion_operation -> expression . AND expression
    (44) expresssion_operation -> expression . OR expression
    (45) expresssion_operation -> expression . SMALLER expression
    (46) expresssion_operation -> expression . BIGGER expression
    (47) expresssion_operation -> expression . NOTEQUAL expression
    (48) expresssion_operation -> expression . EQUAL expression
    (49) expresssion_operation -> expression . * expression
    (50) expresssion_operation -> expression . / expression
    (51) expresssion_operation -> expression . + expression
    (52) expresssion_operation -> expression . - expression
    ?               reduce using rule 11 (statement -> RETURN expression .)
    RETURN          reduce using rule 11 (statement -> RETURN expression .)
    FOR             reduce using rule 11 (statement -> RETURN expression .)
    REPEAT          reduce using rule 11 (statement -> RETURN expression .)
    WHILE           reduce using rule 11 (statement -> RETURN expression .)
    CASE            reduce using rule 11 (statement -> RETURN expression .)
    IF              reduce using rule 11 (statement -> RETURN expression .)
    OUTPUT          reduce using rule 11 (statement -> RETURN expression .)
    INPUT           reduce using rule 11 (statement -> RETURN expression .)
    CONSTANT        reduce using rule 11 (statement -> RETURN expression .)
    CALL            reduce using rule 11 (statement -> RETURN expression .)
    FUNCTION        reduce using rule 11 (statement -> RETURN expression .)
    PROCEDURE       reduce using rule 11 (statement -> RETURN expression .)
    DECLARE         reduce using rule 11 (statement -> RETURN expression .)
    IDENTIFIER      reduce using rule 11 (statement -> RETURN expression .)
    $end            reduce using rule 11 (statement -> RETURN expression .)
    UNTIL           reduce using rule 11 (statement -> RETURN expression .)
    ENDPROCEDURE    reduce using rule 11 (statement -> RETURN expression .)
    ENDWHILE        reduce using rule 11 (statement -> RETURN expression .)
    ELSE            reduce using rule 11 (statement -> RETURN expression .)
    ENDIF           reduce using rule 11 (statement -> RETURN expression .)
    ENDFUNCTION     reduce using rule 11 (statement -> RETURN expression .)
    NEXT            reduce using rule 11 (statement -> RETURN expression .)
    OTHERWISE       reduce using rule 11 (statement -> RETURN expression .)
    NUMBER          reduce using rule 11 (statement -> RETURN expression .)
    STRING          reduce using rule 11 (statement -> RETURN expression .)
    ENDCASE         reduce using rule 11 (statement -> RETURN expression .)
    AND             shift and go to state 48
    OR              shift and go to state 49
    SMALLER         shift and go to state 50
    BIGGER          shift and go to state 51
    NOTEQUAL        shift and go to state 52
    EQUAL           shift and go to state 53
    *               shift and go to state 54
    /               shift and go to state 55
    +               shift and go to state 56
    -               shift and go to state 57


state 24

    (36) expression -> literal .
    AND             reduce using rule 36 (expression -> literal .)
    OR              reduce using rule 36 (expression -> literal .)
    SMALLER         reduce using rule 36 (expression -> literal .)
    BIGGER          reduce using rule 36 (expression -> literal .)
    NOTEQUAL        reduce using rule 36 (expression -> literal .)
    EQUAL           reduce using rule 36 (expression -> literal .)
    *               reduce using rule 36 (expression -> literal .)
    /               reduce using rule 36 (expression -> literal .)
    +               reduce using rule 36 (expression -> literal .)
    -               reduce using rule 36 (expression -> literal .)
    ?               reduce using rule 36 (expression -> literal .)
    RETURN          reduce using rule 36 (expression -> literal .)
    FOR             reduce using rule 36 (expression -> literal .)
    REPEAT          reduce using rule 36 (expression -> literal .)
    WHILE           reduce using rule 36 (expression -> literal .)
    CASE            reduce using rule 36 (expression -> literal .)
    IF              reduce using rule 36 (expression -> literal .)
    OUTPUT          reduce using rule 36 (expression -> literal .)
    INPUT           reduce using rule 36 (expression -> literal .)
    CONSTANT        reduce using rule 36 (expression -> literal .)
    CALL            reduce using rule 36 (expression -> literal .)
    FUNCTION        reduce using rule 36 (expression -> literal .)
    PROCEDURE       reduce using rule 36 (expression -> literal .)
    DECLARE         reduce using rule 36 (expression -> literal .)
    IDENTIFIER      reduce using rule 36 (expression -> literal .)
    $end            reduce using rule 36 (expression -> literal .)
    UNTIL           reduce using rule 36 (expression -> literal .)
    ENDPROCEDURE    reduce using rule 36 (expression -> literal .)
    ENDWHILE        reduce using rule 36 (expression -> literal .)
    ELSE            reduce using rule 36 (expression -> literal .)
    ENDIF           reduce using rule 36 (expression -> literal .)
    ENDFUNCTION     reduce using rule 36 (expression -> literal .)
    NEXT            reduce using rule 36 (expression -> literal .)
    OTHERWISE       reduce using rule 36 (expression -> literal .)
    NUMBER          reduce using rule 36 (expression -> literal .)
    STRING          reduce using rule 36 (expression -> literal .)
    ENDCASE         reduce using rule 36 (expression -> literal .)
    DO              reduce using rule 36 (expression -> literal .)
    THEN            reduce using rule 36 (expression -> literal .)
    ,               reduce using rule 36 (expression -> literal .)
    ]               reduce using rule 36 (expression -> literal .)
    )               reduce using rule 36 (expression -> literal .)
    TO              reduce using rule 36 (expression -> literal .)
    STEP            reduce using rule 36 (expression -> literal .)


state 25
